// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reject > should write the correct disruptions data to dynamoDB 1`] = `
[
  {
    "Consequences": {
      "Consequence": [
        {
          "Advice": {
            "Details": "Some consequence description",
          },
          "Affects": {
            "Networks": {
              "AffectedNetwork": {
                "AllLines": "",
                "VehicleMode": "tram",
              },
            },
          },
          "Blocking": {
            "JourneyPlanner": false,
          },
          "Condition": "unknown",
          "Severity": "slight",
        },
        {
          "Advice": {
            "Details": "Some consequence description",
          },
          "Affects": {
            "Networks": {
              "AffectedNetwork": {
                "AllLines": "",
                "VehicleMode": "bus",
              },
            },
            "Operators": {
              "AffectedOperator": [
                {
                  "OperatorRef": "FSYO",
                },
              ],
            },
          },
          "Blocking": {
            "JourneyPlanner": true,
          },
          "Condition": "unknown",
          "Delays": {
            "Delay": "PT40M",
          },
          "Severity": "severe",
        },
      ],
    },
    "CreationTime": "2023-03-03T00:00:00.000Z",
    "Description": "Test description",
    "ParticipantRef": "DepartmentForTransport",
    "PersonnelReason": "staffInWrongPlace",
    "Planned": true,
    "Progress": "open",
    "PublicationWindow": {
      "StartTime": "2023-03-10T12:00:00.000Z",
    },
    "ReasonType": "PersonnelReason",
    "SituationNumber": "acde070d-8c4c-4f0d-9d8a-162843c10333",
    "Source": {
      "SourceType": "feed",
      "TimeOfCommunication": "2023-03-03T00:00:00.000Z",
    },
    "Summary": "Some summary",
    "ValidityPeriod": [
      {
        "EndTime": "2023-03-17T17:00:00.000Z",
        "StartTime": "2023-03-10T12:00:00.000Z",
      },
      {
        "StartTime": "2023-03-18T12:00:00.000Z",
      },
    ],
  },
  {
    "consequences": [
      {
        "consequenceIndex": 1,
        "consequenceType": "networkWide",
        "description": "Some consequence description",
        "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
        "disruptionSeverity": "slight",
        "removeFromJourneyPlanners": "no",
        "vehicleMode": "tram",
      },
      {
        "consequenceIndex": 0,
        "consequenceOperators": [
          "FSYO",
        ],
        "consequenceType": "operatorWide",
        "description": "Some consequence description",
        "disruptionDelay": "40",
        "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
        "disruptionSeverity": "severe",
        "removeFromJourneyPlanners": "yes",
        "vehicleMode": "bus",
      },
    ],
    "description": "Test description",
    "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
    "disruptionNoEndDateTime": "true",
    "disruptionReason": "staffInWrongPlace",
    "disruptionStartDate": "18/03/2023",
    "disruptionStartTime": "1200",
    "disruptionType": "planned",
    "publishStartDate": "10/03/2023",
    "publishStartTime": "1200",
    "publishStatus": "DRAFT",
    "summary": "Some summary",
    "validity": [
      {
        "disruptionEndDate": "17/03/2023",
        "disruptionEndTime": "1700",
        "disruptionStartDate": "10/03/2023",
        "disruptionStartTime": "1200",
      },
    ],
  },
  "35bae327-4af0-4bbf-8bfa-2c085f214483",
  "REJECTED",
  "Test User",
]
`;

exports[`reject > should write the correct disruptions data to dynamoDB 2`] = `undefined`;

exports[`reject > should write the correct disruptions data to dynamoDB 3`] = `
[
  {
    "Consequences": {
      "Consequence": [
        {
          "Advice": {
            "Details": "Some consequence description",
          },
          "Affects": {
            "Networks": {
              "AffectedNetwork": {
                "AllLines": "",
                "VehicleMode": "tram",
              },
            },
          },
          "Blocking": {
            "JourneyPlanner": false,
          },
          "Condition": "unknown",
          "Severity": "slight",
        },
        {
          "Advice": {
            "Details": "Some consequence description",
          },
          "Affects": {
            "Networks": {
              "AffectedNetwork": {
                "AllLines": "",
                "VehicleMode": "bus",
              },
            },
            "Operators": {
              "AffectedOperator": [
                {
                  "OperatorRef": "FSYO",
                },
              ],
            },
          },
          "Blocking": {
            "JourneyPlanner": true,
          },
          "Condition": "unknown",
          "Delays": {
            "Delay": "PT40M",
          },
          "Severity": "severe",
        },
      ],
    },
    "CreationTime": "2023-03-03T00:00:00.000Z",
    "Description": "Test description",
    "ParticipantRef": "DepartmentForTransport",
    "PersonnelReason": "staffInWrongPlace",
    "Planned": true,
    "Progress": "open",
    "PublicationWindow": {
      "StartTime": "2023-03-10T12:00:00.000Z",
    },
    "ReasonType": "PersonnelReason",
    "SituationNumber": "acde070d-8c4c-4f0d-9d8a-162843c10333",
    "Source": {
      "SourceType": "feed",
      "TimeOfCommunication": "2023-03-03T00:00:00.000Z",
    },
    "Summary": "Some summary",
    "ValidityPeriod": [
      {
        "EndTime": "2023-03-17T17:00:00.000Z",
        "StartTime": "2023-03-10T12:00:00.000Z",
      },
      {
        "StartTime": "2023-03-18T12:00:00.000Z",
      },
    ],
  },
  {
    "consequences": [
      {
        "consequenceIndex": 1,
        "consequenceType": "networkWide",
        "description": "Some consequence description",
        "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
        "disruptionSeverity": "slight",
        "removeFromJourneyPlanners": "no",
        "vehicleMode": "tram",
      },
      {
        "consequenceIndex": 0,
        "consequenceOperators": [
          "FSYO",
        ],
        "consequenceType": "operatorWide",
        "description": "Some consequence description",
        "disruptionDelay": "40",
        "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
        "disruptionSeverity": "severe",
        "removeFromJourneyPlanners": "yes",
        "vehicleMode": "bus",
      },
    ],
    "description": "Test description",
    "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
    "disruptionNoEndDateTime": "true",
    "disruptionReason": "staffInWrongPlace",
    "disruptionStartDate": "18/03/2023",
    "disruptionStartTime": "1200",
    "disruptionType": "planned",
    "publishStartDate": "10/03/2023",
    "publishStartTime": "1200",
    "publishStatus": "DRAFT",
    "socialMediaPosts": [
      {
        "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
        "hootsuiteProfile": "Twitter/1234",
        "messageContent": "Test post 12345",
        "publishDate": "29/05/2030",
        "publishTime": "1300",
        "socialAccount": "Twitter",
        "socialMediaPostIndex": 0,
        "status": "Pending",
      },
      {
        "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
        "hootsuiteProfile": "Twitter/1234",
        "image": {
          "filepath": "/testPath",
          "key": "35bae327-4af0-4bbf-8bfa-2c085f214483/acde070d-8c4c-4f0d-9d8a-162843c10333/0.jpg",
          "mimetype": "image/jpg",
          "originalFilename": "blah.jpg",
          "size": 1000,
        },
        "messageContent": "Test post 12345",
        "publishDate": "29/05/2030",
        "publishTime": "1300",
        "socialAccount": "Twitter",
        "socialMediaPostIndex": 1,
        "status": "Pending",
      },
    ],
    "summary": "Some summary",
    "validity": [
      {
        "disruptionEndDate": "17/03/2023",
        "disruptionEndTime": "1700",
        "disruptionStartDate": "10/03/2023",
        "disruptionStartTime": "1200",
      },
    ],
  },
  "35bae327-4af0-4bbf-8bfa-2c085f214483",
  "REJECTED",
  "Test User",
]
`;
